aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__lsh__tests__lsh_lit_reg_var.snap
---
source: aya-assembly/src/parser/instructions/lsh.rs
expression: result
---
Instruction(
    LshLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Var(
            ByteOffset {
                start: 9,
                end: 12,
            },
        ),
    ),
)
