aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__lsh__tests__lsh_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/lsh.rs
expression: result
---
Instruction(
    LshRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
